Bug fix & new feature
1. Fix table resize issue when table is invisible
2. Fix scrollbar shown in table header
3. Add max option for dialog and support auto-resize
4. Add transaction support for ops request
5. PHP array code of table header is more flexible
6. Update bootstrap to 3.3.6

--- a/css/qwp.css
+++ b/css/qwp.css
@@ -125,6 +125,8 @@ div[qwp='container'] > .slimScrollDiv > .table-responsive{
 }
 .qwp-table > .row {
     position: relative!important;
+    margin-left: 0;
+    margin-right: 0;
 }
 .qwp-search > .close {
     right: 0!important;
